# adaptiveLaplaceBeltrami

./: CMakeLists.txt  Dockerfile  README.md  adaptiveLB.cc  copy_output.sh  coupledLBP.cc  run.sh  step-38.cc  step-6.cc  todo.md
output/: laplacebeltrami_grid-0.gnuplot  laplacebeltrami_solution2d-cycle_0.vtk  laplacebeltrami_solution3d-cycle_0.vtk  poisson_grid-0.gnuplot  poisson_solution2d-cycle_0.vtk  poisson_solution3d-cycle_0.vtk
